--- a/Implementacion/ModuloFunciones/.classpath
+++ b/Implementacion/ModuloFunciones/.classpath
@@ -2,7 +2,7 @@
 <classpath>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="lib" path="/App Administrativo/lib/basics.jar">
+	<classpathentry kind="lib" path="/App Administrativo/lib/basics.jar" sourcepath="/basicos">
 		<attributes>
 			<attribute name="javadoc_location" value="file:/E:/Andrés/Universidad/SÉPTIMO%20SEMESTRE/FIS/proyecto/Implementacion/doc/basics/"/>
 		</attributes>
