--- a/Implementacion/ModuloInventario/.classpath
+++ b/Implementacion/ModuloInventario/.classpath
@@ -5,5 +5,6 @@
 	<classpathentry kind="lib" path="/App Administrativo/api/api.jar"/>
 	<classpathentry kind="lib" path="/App Administrativo/lib/basics.jar"/>
 	<classpathentry kind="lib" path="/App Administrativo/lib/postgresql-42.2.5.jar"/>
+	<classpathentry kind="lib" path="/App Administrativo/lib/imagen.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
