--- a/Implementacion/Cliente/Módulo Boleteria/.classpath
+++ b/Implementacion/Cliente/Módulo Boleteria/.classpath
@@ -2,7 +2,14 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="/App Administrativo/componentes/funciones.jar"/>
-	<classpathentry kind="lib" path="/App Administrativo/lib/imagen.jar" sourcepath="/Imagen"/>
+	<classpathentry kind="lib" path="/App Cliente/lib/basics.jar">
+		<attributes>
+			<attribute name="javadoc_location" value="file:/E:/Andrés/Universidad/SÉPTIMO%20SEMESTRE/FIS/proyecto/Implementacion/doc/basics/"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="/App Cliente/lib/imagen.jar"/>
+	<classpathentry kind="lib" path="/App Cliente/lib/jcalendar-1.4.jar"/>
+	<classpathentry kind="lib" path="/App Cliente/lib/postgresql-42.2.5.jar"/>
+	<classpathentry kind="lib" path="/App Cliente/api/api.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
