--- a/Implementacion/Cliente/ModuloCompra/.classpath
+++ b/Implementacion/Cliente/ModuloCompra/.classpath
@@ -2,8 +2,8 @@
 <classpath>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="lib" path="/App Cliente/lib/basics.jar"/>
 	<classpathentry kind="lib" path="/App Cliente/lib/imagen.jar"/>
+	<classpathentry kind="lib" path="/App Cliente/lib/basics.jar" sourcepath="/basicos"/>
 	<classpathentry kind="lib" path="/App Cliente/lib/jcalendar-1.4.jar"/>
 	<classpathentry kind="lib" path="/App Cliente/lib/placeHolder.jar"/>
 	<classpathentry kind="lib" path="/App Cliente/lib/postgresql-42.2.5.jar"/>
